fix typo and delete unused page

--- a/settings/custom-domain/subdomain.mdx
+++ b/settings/custom-domain/subdomain.mdx
@@ -3,7 +3,7 @@ title: "Subdomain"
 description: "Host the documentation at your website's custom subdomain"
 ---
 
-To set up your documentation on a custom subdomain, you'll need to set your desired custom subdomain n your Mintlify settings and configure your DNS settings on your domain provider.
+To set up your documentation on a custom subdomain, you'll need to set your desired custom subdomain in your Mintlify settings and configure your DNS settings on your domain provider.
 
 <Info>
   Looking to set up a custom subdirectory domain like mintlify.com/docs? Find
