add playground config to openapi

--- a/api-playground/openapi.mdx
+++ b/api-playground/openapi.mdx
@@ -3,6 +3,12 @@ title: "OpenAPI Support"
 description: "Reference OpenAPI endpoints for the API playground"
 ---
 
+<Note>
+  To properly set up the API playgrounds, you will also need to configure your
+  api in your `mint.json` file according to our [playground
+  configurations](/api-playground/overview#playground-settings)
+</Note>
+
 ### Add an OpenAPI specification file
 
 In order to reference OpenAPI, you must have the OpenAPI file in either a `json` or `yaml` format loaded into the docs folder. The name is irrelevant as long as the file follows [OpenAPI specifications](https://swagger.io/specification/).
