--- a/content/page.mdx
+++ b/content/page.mdx
@@ -81,12 +81,13 @@ sidebarTitle: "Short title"
 
 ## Sidebar Icons
 
-Want an icon for your sidebar item like the ones in [components](/content/components/accordion)? You can set an `icon` attribute in the metadata! All icons from [Font Awesome](https://fontawesome.com/icons) are available for us.
+Want an icon for your sidebar item like the ones in [components](/content/components/accordion)? You can set an `icon` attribute in the metadata! All icons from [Font Awesome](https://fontawesome.com/icons) are available for us. You can also set an icon type (optional). If not set, the icon type will be regular.
 
 ```md
 ---
 title: "Code Block"
 icon: "rectangle-code"
+iconType: "solid"
 ---
 ```
 
