--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Global Settings (mint.json)'
-description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
+title: "Global Settings (mint.json)"
+description: "Mintlify gives you complete control over the look and feel of your documentation using the mint.json file"
 ---
 
 Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) or from an [example](#example-mint-json)
@@ -111,9 +111,19 @@ Example: `mintlify`
 
     </ResponseField>
     <ResponseField name="pages" type="string[]">
-    The relative paths to the markdown files that will serve as pages.
+    The relative paths to the markdown files that will serve as pages. Note: groups are recursive, so to add a sub-folder add another group object in the page array.
 
-    Example: `["customization", "page"]`
+    Example: `["customization", "page", { "group": "subfolder", "pages": ["/subfolder/page"]}]`
+
+    </ResponseField>
+        <ResponseField name="icon" type="string">
+    The [Fontawesome](https://fontawesome.com/icons) icon for the group. Note: this only applies to sub-folders.
+
+    </ResponseField>
+
+        </ResponseField>
+        <ResponseField name="iconType" type="string">
+    The type of [Fontawesome](https://fontawesome.com/icons) icon. Must be one of: brands, duotone, light, sharp-solid, solid, thin
 
     </ResponseField>
 
