add api reference quickstart

--- a/api-playground/configuration.mdx
+++ b/api-playground/configuration.mdx
@@ -1,33 +1,9 @@
 ---
-title: "Configuration"
+title: "Quickstart"
 description: "Set up documentation for your API endpoints"
 ---
 
-## Setting the API metadata
-
-Setting the `api` field in the page's metadata will enable the [API playground](/api-playground).
-
-<CodeGroup>
-
-```md Example
----
-title: "Create new user"
-api: "POST https://api.mintlify.com/user"
----
-```
-
-```md Format
----
-title: [title of the page]
-api: [method] [endpoint]
----
-```
-
-</CodeGroup>
-
-### Method
-
-This can be any one of the following REST API methods:
+Mintlify supports the following REST API methods:
 
 | Method   | Description                                      |
 | -------- | ------------------------------------------------ |
@@ -37,12 +13,49 @@ This can be any one of the following REST API methods:
 | `PATCH`  | Update a REST API resource                       |
 | `DELETE` | Delete a REST API resource or related component  |
 
-### Endpoint
+From the defined endpoints, we generate an API playground, request examples, and response examples.
 
-The endpoint should point to the API that the playground should call. For example, it can be something like:
+![API example](/images/api-example.png)
 
-```bash
-https://api.example.com/v1/endpoint
+## Step 1: Configure your API
+
+In your `mint.json` file, define your base URL and auth method:
+
+```json
+{
+  "api": {
+    "baseUrl": "https://mintlify.com/api", //String array for multiple base URLs
+    "auth": {
+      "method": "bearer" // Options: bearer, basic, key.
+      // Do not set method if OpenAPI spec includes security field
+    }
+  }
+}
+```
+
+If you would not like to show an API playground, you don't need to include auth types. Hide the playground with the following field:
+
+```json
+{
+  "api": {
+    "playground": {
+      "mode": "hide"
+    }
+  }
+}
+```
+
+Find a full list of API configurations [here](/settings/global#api-configurations).
+
+## Step 2: Create your endpoint pages
+
+Each API endpoint page should have a corresponding MDX file. At the top of each file, define:
+
+```mdx
+---
+title: "Create new user"
+api: "POST https://api.mintlify.com/user"
+---
 ```
 
 If the endpoint has a path parameter, the path should be determined with `{}` rather than `:` - for example:
@@ -51,16 +64,25 @@ If the endpoint has a path parameter, the path should be determined with `{}` ra
 https://api.example.com/v1/endpoint/{userId}
 ```
 
+If you're using an OpenAPI spec, you can autogenerate thes files using our [scraper](/api-playground/openapi-generation). The definition should look like:
+
+```mdx
+---
+title: "Create new user" // Optional - defaults to OpenAPI endpoint title
+openapi: "POST https://api.mintlify.com/user"
+---
+```
+
+Learn more at the [OpenAPI guide](/api-playground/openapi).
+
 <Note>
 
 If you have `baseUrl` configured in [mint.json](/settings/global), you can use relative paths like `/v1/endpoint`.
 
 </Note>
 
-## OpenAPI
+## Step 3: Add your endpoints to your docs
 
-Mintlify also supports OpenAPI and Swagger files.
+Add your endpoint pages to the sidebar by adding the paths to the `navigation` field in your `mint.json`. Learn more about structuring your docs [here](/settings/navigation).
 
-<Snippet file="api-playground/openapi.mdx" />
-
-Learn more at the [OpenAPI guide](/api-playground/openapi).
+Pro Tip: If you're using OpenAPI, use the scraper output to easily add the paths to your `mint.json` file.
