Update props documentation for consistency

--- a/content/components/steps.mdx
+++ b/content/components/steps.mdx
@@ -64,8 +64,8 @@ Steps have two variants: `subtle` and `outline` to distinugish content such as t
 	A list of `Step` components.
 </ResponseField>
 
-<ResponseField name='variant' type="'subtle' | 'outline'">
-	The styling variant of the steps. Defaults to `subtle`.
+<ResponseField name='variant' type="string">
+	The styling variant of the steps. One of `subtle` or `outline`.
 </ResponseField>
 
 ## Individual Step Props
@@ -87,9 +87,9 @@ Steps have two variants: `subtle` and `outline` to distinugish content such as t
 </ResponseField>
 
 <ResponseField name='children' type='string | ReactNode' required>
-	The content of a step.
+	The content of a step either as plain text, or components.
 </ResponseField>
 
-<ResponseField name='variant' type="'subtle' | 'outline'">
-	The styling variant of the steps. Defaults to `subtle`.
+<ResponseField name='variant' type="string">
+	The styling variant of the steps. The styling variant of the steps. One of `subtle` or `outline`.
 </ResponseField>
