--- a/content/components/steps.mdx
+++ b/content/components/steps.mdx
@@ -4,92 +4,97 @@ description: "Sequence content using the Steps component"
 icon: "arrow-progress"
 ---
 
-You can add any number of Steps.
+Steps are the best way to display a series of actions of events to your users. You can add as many steps as desired.
 
 <Steps>
-	<Step title='First Step'>
-		These are instructions or content that only pertain to the first step.
-	</Step>
-	<Step title='Second Step'>
-		These are instructions or content that only pertain to the second step.
-	</Step>
-	<Step title='Third Step'>
-		These are instructions or content that only pertain to the third step.
-	</Step>
+  <Step title="First Step">
+    These are instructions or content that only pertain to the first step.
+  </Step>
+  <Step title="Second Step">
+    These are instructions or content that only pertain to the second step.
+  </Step>
+  <Step title="Third Step">
+    These are instructions or content that only pertain to the third step.
+  </Step>
 </Steps>
 
 <RequestExample>
 
 ```jsx Steps Example
 <Steps>
-	<Step title='First Step'>
-		These are instructions or content that only pertain to the first step.
-	</Step>
-	<Step title='Second Step'>
-		These are instructions or content that only pertain to the second step.
-	</Step>
-	<Step title='Third Step'>
-		These are instructions or content that only pertain to the third step.
-	</Step>
+  <Step title="First Step">
+    These are instructions or content that only pertain to the first step.
+  </Step>
+  <Step title="Second Step">
+    These are instructions or content that only pertain to the second step.
+  </Step>
+  <Step title="Third Step">
+    These are instructions or content that only pertain to the third step.
+  </Step>
 </Steps>
 ```
+
+</RequestExample>
 
 ## Variants
 
 Steps have two variants: `subtle` and `outline` to distinugish content such as the current step or simply customizing the look and feel. The `variant` prop can be set on both the `Steps` component and individual `Step` components.
 
-<Steps variant='subtle'>
-	<Step title='First Step'>
-		These are instructions or content that only pertain to the first step.
-	</Step>
-	<Step title='Second Step'>
-		These are instructions or content that only pertain to the second step.
-	</Step>
+<Steps variant="subtle">
+  <Step title="First Step">
+    These are instructions or content that only pertain to the first step.
+  </Step>
+  <Step title="Second Step">
+    These are instructions or content that only pertain to the second step.
+  </Step>
 </Steps>
 
 <Steps>
-	<Step title='First Step' variant='outline'>
-		These are instructions or content that only pertain to the first step.
-	</Step>
-	<Step title='Second Step' variant='outline'>
-		These are instructions or content that only pertain to the second step.
-	</Step>
+  <Step title="First Step" variant="outline">
+    These are instructions or content that only pertain to the first step.
+  </Step>
+  <Step title="Second Step" variant="outline">
+    These are instructions or content that only pertain to the second step.
+  </Step>
 </Steps>
-
-</RequestExample>
 
 ## Steps Props
 
-<ResponseField name='children' type='ReactElement<StepProps>[]' required>
-	A list of `Step` components.
+<ResponseField name="children" type="ReactElement<StepProps>[]" required>
+  A list of `Step` components.
 </ResponseField>
 
-<ResponseField name='variant' type="string">
-	The styling variant of the steps. One of `subtle` or `outline`.
+<ResponseField name="variant" type="string">
+  The styling variant of the steps. One of `subtle` or `outline`.
+</ResponseField>
+
+<ResponseField name="titleSize" type="string">
+  The size of the step titles. One of `h3` and `h2`. Defaults `h3`.
 </ResponseField>
 
 ## Individual Step Props
 
-<ResponseField name='icon' type='string or svg'>
-	A [Font Awesome icon](https://fontawesome.com/icons) or SVG code in `icon={}`
+<ResponseField name="icon" type="string or svg">
+  A [Font Awesome icon](https://fontawesome.com/icons) or SVG code in `icon={}`
 </ResponseField>
 
-<ResponseField name='iconType' type='string'>
-	One of `regular`, `solid`, `light`, `thin`, `sharp-solid`, `duotone`, `brands`
+<ResponseField name="iconType" type="string">
+  One of `regular`, `solid`, `light`, `thin`, `sharp-solid`, `duotone`, `brands`
 </ResponseField>
 
-<ResponseField name='title' type='string'>
-	The title is the primary text for the step and shows up next to the indicator.
+<ResponseField name="title" type="string">
+  The title is the primary text for the step and shows up next to the indicator.
 </ResponseField>
 
-<ResponseField name='stepNumber' type='number'>
-	The number of the step.
+<ResponseField name="stepNumber" type="number">
+  The number of the step.
 </ResponseField>
 
-<ResponseField name='children' type='string | ReactNode' required>
-	The content of a step either as plain text, or components.
+<ResponseField name="children" type="string | ReactNode" required>
+  The content of a step either as plain text, or components.
 </ResponseField>
 
-<ResponseField name='variant' type="string">
-	The styling variant of the steps. The styling variant of the steps. One of `subtle` or `outline`.
+<ResponseField name="variant" type="string">
+  The styling variant of the steps. The styling variant of the steps. One of
+  `subtle` or `outline`.
 </ResponseField>
