--- a/content/embed.mdx
+++ b/content/embed.mdx
@@ -10,7 +10,7 @@ description: "Images, videos, and any HTML elements"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowFullScreen
 ></iframe>
 
 <br />
