--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -81,7 +81,7 @@ For more information, we recommend the following sections:
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowFullScreen
 ></iframe>
 
 <br />
@@ -102,7 +102,7 @@ For YouTube videos use:
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowFullScreen
 ></iframe>
 ```
 
@@ -120,7 +120,7 @@ To autoplay the video, use:
 
 ```html
 <video
-  autoPlay
+  autoplay
   muted
   loop
   playsinline
