--- a/content/components/steps.mdx
+++ b/content/components/steps.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Steps"
-description: "Sequence content using the Steps component"
-icon: "arrow-progress"
+title: 'Steps'
+description: 'Sequence content using the Steps component'
+icon: 'arrow-progress'
 ---
 
 Steps are the best way to display a series of actions of events to your users. You can add as many steps as desired.
@@ -36,43 +36,21 @@ Steps are the best way to display a series of actions of events to your users. Y
 
 </RequestExample>
 
-## Variants
-
-Steps have two variants: `subtle` and `outline` to distinugish content such as the current step or simply customizing the look and feel. The `variant` prop can be set on both the `Steps` component and individual `Step` components.
-
-<Steps variant="subtle">
-  <Step title="First Step">
-    These are instructions or content that only pertain to the first step.
-  </Step>
-  <Step title="Second Step">
-    These are instructions or content that only pertain to the second step.
-  </Step>
-</Steps>
-
-<Steps>
-  <Step title="First Step" variant="outline">
-    These are instructions or content that only pertain to the first step.
-  </Step>
-  <Step title="Second Step" variant="outline">
-    These are instructions or content that only pertain to the second step.
-  </Step>
-</Steps>
-
 ## Steps Props
 
 <ResponseField name="children" type="ReactElement<StepProps>[]" required>
   A list of `Step` components.
 </ResponseField>
 
-<ResponseField name="variant" type="string">
-  The styling variant of the steps. One of `subtle` or `outline`.
-</ResponseField>
-
-<ResponseField name="titleSize" type="string">
-  The size of the step titles. One of `h3` and `h2`. Defaults `h3`.
+<ResponseField name="titleSize" type="string" default="p">
+  The size of the step titles. One of `p`, `h2` and `h3`.
 </ResponseField>
 
 ## Individual Step Props
+
+<ResponseField name="children" type="string | ReactNode" required>
+  The content of a step either as plain text, or components.
+</ResponseField>
 
 <ResponseField name="icon" type="string or svg">
   A [Font Awesome icon](https://fontawesome.com/icons) or SVG code in `icon={}`
@@ -90,11 +68,6 @@ Steps have two variants: `subtle` and `outline` to distinugish content such as t
   The number of the step.
 </ResponseField>
 
-<ResponseField name="children" type="string | ReactNode" required>
-  The content of a step either as plain text, or components.
-</ResponseField>
-
-<ResponseField name="variant" type="string">
-  The styling variant of the steps. The styling variant of the steps. One of
-  `subtle` or `outline`.
+<ResponseField name="titleSize" type="string" default="p">
+  The size of the step titles. One of `p`, `h2` and `h3`.
 </ResponseField>
