--- a/content/components/card-group.mdx
+++ b/content/components/card-group.mdx
@@ -7,16 +7,16 @@ icon: 'rectangles-mixed'
 The `CardGroup` component lets you group multiple `Card` components together. It's most often used to put multiple cards on the same column.
 
 <CardGroup cols={2}>
-  <Card title="First Card" icon="square-1" color="#ea5a0c">
+  <Card title="First Card" icon="square-1">
     Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
   </Card>
-  <Card title="Second Card" icon="square-2" color="#0285c7">
+  <Card title="Second Card" icon="square-2">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit
   </Card>
-  <Card title="Third Card" icon="square-3" color="#16a34a">
+  <Card title="Third Card" icon="square-3">
     Ut enim ad minim veniam, quis nostrud exercitation ullamco
   </Card>
-  <Card title="Fourth Card" icon="square-4" color="#dc2626">
+  <Card title="Fourth Card" icon="square-4">
     Excepteur sint occaecat cupidatat non proident
   </Card>
 </CardGroup>
@@ -25,16 +25,16 @@ The `CardGroup` component lets you group multiple `Card` components together. It
 
 ```jsx Card Group Example
 <CardGroup cols={2}>
-  <Card title="First Card" icon="square-1" color="#ea5a0c">
+  <Card title="First Card" icon="square-1">
     Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
   </Card>
-  <Card title="Second Card" icon="square-2" color="#0285c7">
+  <Card title="Second Card" icon="square-2">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit
   </Card>
-  <Card title="Third Card" icon="square-3" color="#16a34a">
+  <Card title="Third Card" icon="square-3">
     Ut enim ad minim veniam, quis nostrud exercitation ullamco
   </Card>
-  <Card title="Fourth Card" icon="square-4" color="#dc2626">
+  <Card title="Fourth Card" icon="square-4">
     Excepteur sint occaecat cupidatat non proident
   </Card>
 </CardGroup>
